# Curvature-based-trajectory-planning-for-robot-endeffector-in-contact-with-objects

./: CMakeLists.txt  README.md  package.xml
include/schunk_lwa4p_force/: force_control.h  force_orientation.h  point_cloud_position.h
nodes/: forceControlNode.cpp  forceOrientationNode.cpp  pointCloudPositionNode.cpp
src/: force_applied.cpp  force_applied_old.cpp  force_control.cpp  force_orientation.cpp  point_cloud_position.cpp
